--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,11 +21,28 @@ jobs:
           python-version: '3.11'
           cache: 'pip'
       
+      - name: Cache pip packages
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('backend/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+      
       - name: Install dependencies
         working-directory: ./backend
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+      
+      - name: Verify aiogram installation
+        working-directory: ./backend
+        run: |
+          python -c "import aiogram; print('aiogram version:', getattr(aiogram, '__version__', 'unknown'))"
+          python -c "from aiogram.fsm.storage.memory import MemoryStorage; print('aiogram.fsm.storage OK')"
+          python -c "from aiogram.fsm.context import FSMContext; print('aiogram.fsm.context OK')"
+          python -c "from aiogram.types import InlineKeyboardButton; print('aiogram.types OK')"
+          python -c "import sys; print('Python path:', sys.path[:3])"
       
       - name: Cache ruff results
         uses: actions/cache@v3
@@ -55,13 +72,20 @@ jobs:
       
       - name: Run tests with coverage
         working-directory: ./backend
+        env:
+          PYTHONPATH: ${{ github.workspace }}/backend
         run: |
-          pytest tests/ -v --tb=short --cov=src --cov-report=term-missing --cov-report=xml
+          # Запускаем основные тесты
+          pytest tests/application tests/domain tests/infrastructure tests/presentation/web \
+            -v --tb=short --cov=src --cov-report=term-missing --cov-report=xml --cov-report=html
+          # Запускаем presentation/telegram тесты отдельно для изоляции
+          pytest tests/presentation/telegram \
+            -v --tb=short --cov=src --cov-append --cov-report=term-missing --cov-report=xml --cov-report=html
       
       - name: Check coverage threshold
         working-directory: ./backend
         run: |
-          coverage report --fail-under=70 || echo "Coverage is below 70%, but continuing..."
+          coverage report --fail-under=70
       
       - name: Check migrations
         working-directory: ./backend
