--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,6 +3,7 @@ uvicorn[standard]==0.24.0
 aiogram==3.23.0
 sqlalchemy==2.0.23
 asyncpg==0.29.0
+aiosqlite==0.19.0
 alembic==1.12.1
 pydantic==2.5.0
 httpx==0.25.1
