--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -51,6 +51,7 @@ addopts = [
     "--strict-markers",
     "--tb=short",
     "--disable-warnings",
+    "--import-mode=importlib",
 ]
 
 [tool.coverage.run]
