--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,6 +29,8 @@ jobs:
       
       - name: Run tests with coverage
         working-directory: ./backend
+        env:
+          PYTHONPATH: ${{ github.workspace }}/backend
         run: |
           pytest tests/ --cov=src --cov-report=xml --cov-report=term --cov-report=html -v
       
