--- a/backend/pytest.ini
+++ b/backend/pytest.ini
@@ -5,7 +5,8 @@ python_classes = Test*
 python_functions = test_*
 asyncio_mode = auto
 asyncio_default_fixture_loop_scope = function
-pythonpath = .
+# pythonpath removed - using PYTHONPATH env var and conftest.py instead
+# This prevents conflicts between pytest.ini pythonpath and PYTHONPATH in CI
 addopts = 
     -v
     --strict-markers
