--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,11 +31,11 @@ jobs:
         working-directory: ./backend
         env:
           PYTHONPATH: ${{ github.workspace }}/backend
-          DATABASE_URL: sqlite+aiosqlite:///:memory:
+          DATABASE_URL: "sqlite+aiosqlite:///:memory:"
           TELEGRAM_BOT_TOKEN: test_token
           OPENROUTER_API_KEY: test_key
         run: |
-          pytest tests/ --cov=src --cov-report=xml --cov-report=term --cov-report=html -v
+          pytest tests/ --cov=src --cov-report=xml --cov-report=term --cov-report=html -v --import-mode=importlib
       
       - name: Check coverage threshold
         working-directory: ./backend
