--- a/backend/pytest.ini
+++ b/backend/pytest.ini
@@ -5,12 +5,9 @@ python_classes = Test*
 python_functions = test_*
 asyncio_mode = auto
 asyncio_default_fixture_loop_scope = function
-pythonpath = .
-# pythonpath = . is needed for local development
-# In CI, PYTHONPATH env var takes precedence and this is ignored
-# Note: When collecting all tests together, telegram tests may fail with aiogram import errors
-# Workaround: Run telegram tests separately: pytest tests/presentation/telegram/
-# In CI, this is handled by explicit PYTHONPATH and --import-mode=importlib
+# pythonpath removed - using PYTHONPATH env var (CI) and conftest.py (local)
+# This prevents conflicts between pytest.ini pythonpath and PYTHONPATH in CI
+# when using --import-mode=importlib
 addopts = 
     -v
     --strict-markers
