--- a/env.example
+++ b/env.example
@@ -2,9 +2,33 @@
 TELEGRAM_BOT_TOKEN=1234567890:ABCdefGHIjklMNOpqrsTUVwxyz1234567890
 
 # Database Configuration
+# Имя пользователя PostgreSQL (НЕ используется как имя базы данных!)
 POSTGRES_USER=birthday_user
+# Пароль пользователя PostgreSQL
 POSTGRES_PASSWORD=secure_password_2024
+# Имя базы данных PostgreSQL (ВАЖНО: должно отличаться от POSTGRES_USER!)
 POSTGRES_DB=birthday_calendar_db
+
+# Полный URL подключения к базе данных
+# Формат: postgresql+asyncpg://USERNAME:PASSWORD@HOST:PORT/DATABASE_NAME
+# 
+# ВАЖНО:
+# - DATABASE_NAME (после последнего /) должен совпадать с POSTGRES_DB
+# - DATABASE_NAME НЕ должен совпадать с POSTGRES_USER
+# - Для Docker Compose используйте имя сервиса postgres как HOST
+# - Для локального запуска используйте localhost как HOST
+#
+# Правильный пример:
+#   DATABASE_URL=postgresql+asyncpg://birthday_user:password@postgres:5432/birthday_calendar_db
+#   где birthday_user - это POSTGRES_USER
+#   где birthday_calendar_db - это POSTGRES_DB (имя базы данных)
+#
+# НЕПРАВИЛЬНО (база данных = имя пользователя):
+#   DATABASE_URL=postgresql+asyncpg://birthday_user:password@postgres:5432/birthday_user
+#   Это вызовет ошибку: "database 'birthday_user' does not exist"
+#
+# Если используете Docker Compose, DATABASE_URL формируется автоматически из переменных выше.
+# Если настраиваете вручную, убедитесь что имя базы данных в URL совпадает с POSTGRES_DB.
 DATABASE_URL=postgresql+asyncpg://birthday_user:secure_password_2024@postgres:5432/birthday_calendar_db
 
 # OpenRouter API Configuration
