--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,3 +1,16 @@
+# Если возникают проблемы с загрузкой образа python:3.11-slim (TLS handshake timeout):
+#
+# Вариант 1: Использовать альтернативный тег (раскомментируйте нужную строку)
+#   FROM python:3.11          # Полный образ (больше размер, но может быть доступен)
+#   FROM python:slim          # Последняя версия slim
+#
+# Вариант 2: Использовать локальный образ (если уже загружен)
+#   Запустите: docker compose build --pull=never
+#
+# Вариант 3: Предварительно загрузить образ
+#   Windows: .\scripts\download-all-images.ps1
+#   Linux/macOS: ./scripts/download-all-images.sh
+
 FROM python:3.11-slim
 
 # Build arguments for metadata
@@ -14,22 +27,37 @@ LABEL org.opencontainers.image.created="$BUILD_DATE" \
 
 WORKDIR /app
 
-# Install system dependencies
-RUN apt-get update && apt-get install -y --no-install-recommends \
+# Install system dependencies with BuildKit cache mounts for faster rebuilds
+RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
+    --mount=type=cache,target=/var/lib/apt,sharing=locked \
+    apt-get update && apt-get install -y --no-install-recommends \
     gcc \
-    && rm -rf /var/lib/apt/lists/*
+    && rm -rf /var/lib/apt/lists/* \
+    && apt-get clean
 
 # Copy and install Python dependencies first (for better caching)
-COPY requirements.txt .
-RUN pip install --no-cache-dir --upgrade pip && \
-    pip install --no-cache-dir -r requirements.txt
+# Using production requirements only to reduce image size and build time
+# BuildKit cache mount ускоряет повторные сборки на 30-50%
+COPY requirements-prod.txt .
+RUN --mount=type=cache,target=/root/.cache/pip \
+    pip install --no-cache-dir --upgrade pip && \
+    pip install --no-cache-dir -r requirements-prod.txt
 
 # Copy application code
 COPY . .
 
-# Create non-root user for security
-RUN useradd -m -u 1000 appuser && chown -R appuser:appuser /app
-USER appuser
+# Copy entrypoint script before user creation
+COPY docker-entrypoint.sh /usr/local/bin/
+
+# Create non-root user and set permissions in single layer
+# This reduces image layers and improves build performance
+RUN useradd -m -u 1000 appuser && \
+    chown -R appuser:appuser /app && \
+    chmod +x /usr/local/bin/docker-entrypoint.sh
+
+# Используем entrypoint для создания пользователя при запуске
+# Это необходимо при использовании volume монтирования
+ENTRYPOINT ["/usr/local/bin/docker-entrypoint.sh"]
 
 CMD ["python", "main.py"]
 
