--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,9 @@
+# Production dependencies
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 aiogram==3.23.0
 sqlalchemy==2.0.23
 asyncpg==0.29.0
-aiosqlite==0.19.0
 alembic==1.12.1
 pydantic==2.5.0
 httpx==0.25.1
@@ -11,6 +11,8 @@ pillow==10.1.0
 qrcode[pil]==7.4.2
 apscheduler==3.10.4
 python-dotenv==1.0.0
+
+# Development and testing dependencies
 pytest==7.4.3
 pytest-asyncio==0.21.1
 pytest-mock==3.12.0
