--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,7 @@
 # Production dependencies
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
+slowapi==0.1.9
 aiogram==3.23.0
 sqlalchemy==2.0.23
 asyncpg==0.29.0
