--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -58,8 +58,14 @@ jobs:
           ssh-private-key: ${{ secrets.DEPLOY_SSH_KEY }}
       
       - name: Add server to known hosts
+        env:
+          DEPLOY_HOST: ${{ secrets.DEPLOY_HOST }}
         run: |
-          ssh-keyscan -H ${{ secrets.DEPLOY_HOST }} >> ~/.ssh/known_hosts
+          if [ -z "$DEPLOY_HOST" ]; then
+            echo "❌ DEPLOY_HOST is empty"
+            exit 1
+          fi
+          ssh-keyscan -H "$DEPLOY_HOST" >> ~/.ssh/known_hosts
       
       - name: Save current images as previous
         env:
@@ -67,12 +73,17 @@ jobs:
           DEPLOY_USER: ${{ secrets.DEPLOY_USER }}
           DEPLOY_PATH: ${{ secrets.DEPLOY_PATH }}
         run: |
-          ssh $DEPLOY_USER@$DEPLOY_HOST << EOF
-            cd $DEPLOY_PATH
+          if [ -z "$DEPLOY_HOST" ] || [ -z "$DEPLOY_USER" ] || [ -z "$DEPLOY_PATH" ]; then
+            echo "❌ Required deployment variables are empty"
+            exit 1
+          fi
+          export DEPLOY_HOST DEPLOY_USER DEPLOY_PATH
+          ssh "$DEPLOY_USER@$DEPLOY_HOST" << EOF
+            cd "$DEPLOY_PATH"
             # Tag current images as previous for rollback
             docker images --format "{{.Repository}}:{{.Tag}}" | grep -E "(backend|frontend)" | while read image; do
-              if [[ ! "$image" =~ :previous$ ]]; then
-                docker tag "$image" "${image%:*}:previous" || true
+              if [[ ! "\$image" =~ :previous$ ]]; then
+                docker tag "\$image" "\${image%:*}:previous" || true
               fi
             done
           EOF
@@ -85,13 +96,18 @@ jobs:
           ENVIRONMENT: ${{ steps.env.outputs.env }}
           GITHUB_REF_NAME: ${{ github.ref_name }}
         run: |
-          ssh $DEPLOY_USER@$DEPLOY_HOST << EOF
-            cd $DEPLOY_PATH
+          if [ -z "$DEPLOY_HOST" ] || [ -z "$DEPLOY_USER" ] || [ -z "$DEPLOY_PATH" ]; then
+            echo "❌ Required deployment variables are empty"
+            exit 1
+          fi
+          export DEPLOY_HOST DEPLOY_USER DEPLOY_PATH GITHUB_REF_NAME
+          ssh "$DEPLOY_USER@$DEPLOY_HOST" << EOF
+            cd "$DEPLOY_PATH"
             
             # Pull latest code
             git fetch origin
-            git checkout $GITHUB_REF_NAME
-            git pull origin $GITHUB_REF_NAME
+            git checkout "$GITHUB_REF_NAME"
+            git pull origin "$GITHUB_REF_NAME"
             
             # Pull latest Docker images
             docker compose pull backend frontend
@@ -111,6 +127,10 @@ jobs:
           DEPLOY_HOST: ${{ secrets.DEPLOY_HOST }}
           DEPLOY_PROTOCOL: ${{ secrets.DEPLOY_PROTOCOL || 'http' }}
         run: |
+          if [ -z "$DEPLOY_HOST" ]; then
+            echo "❌ DEPLOY_HOST is empty, skipping health check"
+            exit 1
+          fi
           API_URL="$DEPLOY_PROTOCOL://$DEPLOY_HOST/"
           for i in {1..30}; do
             if curl -f -k "$API_URL" > /dev/null 2>&1; then
@@ -130,8 +150,13 @@ jobs:
           DEPLOY_USER: ${{ secrets.DEPLOY_USER }}
           DEPLOY_PATH: ${{ secrets.DEPLOY_PATH }}
         run: |
-          ssh $DEPLOY_USER@$DEPLOY_HOST << EOF
-            cd $DEPLOY_PATH
+          if [ -z "$DEPLOY_HOST" ] || [ -z "$DEPLOY_USER" ] || [ -z "$DEPLOY_PATH" ]; then
+            echo "❌ Required deployment variables are empty, cannot rollback"
+            exit 1
+          fi
+          export DEPLOY_HOST DEPLOY_USER DEPLOY_PATH
+          ssh "$DEPLOY_USER@$DEPLOY_HOST" << EOF
+            cd "$DEPLOY_PATH"
             docker compose pull backend:previous frontend:previous || true
             docker compose up -d backend frontend
           EOF
