--- a/nginx/conf.d/backend.conf
+++ b/nginx/conf.d/backend.conf
@@ -26,6 +26,9 @@ server {
         proxy_pass http://127.0.0.1:8000;
         proxy_http_version 1.1;
         
+        # Явная передача HTTP метода (важно для POST запросов)
+        proxy_method $request_method;
+        
         # Заголовки для правильной работы прокси
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -33,6 +36,7 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Forwarded-Host $host;
         proxy_set_header X-Forwarded-Port $server_port;
+        proxy_set_header Connection "";
 
         # Таймауты
         proxy_connect_timeout 60s;
