--- a/env.example
+++ b/env.example
@@ -1,34 +1,82 @@
 # Telegram Bot Configuration
 TELEGRAM_BOT_TOKEN=1234567890:ABCdefGHIjklMNOpqrsTUVwxyz1234567890
 
-# Database Configuration
-# Имя пользователя PostgreSQL (НЕ используется как имя базы данных!)
+# ============================================
+# PostgreSQL Database Configuration
+# ============================================
+# ВАЖНО: Эти переменные используются в docker-compose.yml
+# Убедитесь, что значения совпадают в DATABASE_URL!
+
+# Имя пользователя PostgreSQL
+# НЕ используйте это имя как имя базы данных!
 POSTGRES_USER=birthday_user
+
 # Пароль пользователя PostgreSQL
+# ВАЖНО: Используйте надежный пароль в production!
+# Минимум 8 символов, рекомендуется: буквы, цифры, спецсимволы
 POSTGRES_PASSWORD=secure_password_2024
-# Имя базы данных PostgreSQL (ВАЖНО: должно отличаться от POSTGRES_USER!)
+
+# Имя базы данных PostgreSQL
+# ВАЖНО: Должно отличаться от POSTGRES_USER!
+# PostgreSQL не создаст базу данных с именем пользователя автоматически
 POSTGRES_DB=birthday_calendar_db
 
+# ============================================
+# DATABASE_URL Configuration
+# ============================================
 # Полный URL подключения к базе данных
 # Формат: postgresql+asyncpg://USERNAME:PASSWORD@HOST:PORT/DATABASE_NAME
-# 
-# ВАЖНО:
-# - DATABASE_NAME (после последнего /) должен совпадать с POSTGRES_DB
-# - DATABASE_NAME НЕ должен совпадать с POSTGRES_USER
-# - Для Docker Compose используйте имя сервиса postgres как HOST
-# - Для локального запуска используйте localhost как HOST
 #
-# Правильный пример:
-#   DATABASE_URL=postgresql+asyncpg://birthday_user:password@postgres:5432/birthday_calendar_db
-#   где birthday_user - это POSTGRES_USER
-#   где birthday_calendar_db - это POSTGRES_DB (имя базы данных)
+# КРИТИЧЕСКИ ВАЖНО:
+# 1. DATABASE_NAME (после последнего /) ДОЛЖЕН совпадать с POSTGRES_DB
+# 2. DATABASE_NAME НЕ должен совпадать с POSTGRES_USER
+# 3. USERNAME должен совпадать с POSTGRES_USER
+# 4. PASSWORD должен совпадать с POSTGRES_PASSWORD
+# 5. Для Docker Compose используйте имя сервиса 'postgres' как HOST
+# 6. Для локального запуска используйте 'localhost' как HOST
+# 7. Порт обычно 5432 (стандартный порт PostgreSQL)
 #
-# НЕПРАВИЛЬНО (база данных = имя пользователя):
-#   DATABASE_URL=postgresql+asyncpg://birthday_user:password@postgres:5432/birthday_user
-#   Это вызовет ошибку: "database 'birthday_user' does not exist"
+# Примеры:
+#
+# ✅ ПРАВИЛЬНО (для Docker Compose):
+#    DATABASE_URL=postgresql+asyncpg://birthday_user:secure_password_2024@postgres:5432/birthday_calendar_db
+#    где:
+#    - birthday_user = POSTGRES_USER
+#    - secure_password_2024 = POSTGRES_PASSWORD
+#    - postgres = имя сервиса в docker-compose.yml
+#    - 5432 = стандартный порт PostgreSQL
+#    - birthday_calendar_db = POSTGRES_DB
+#
+# ✅ ПРАВИЛЬНО (для локального запуска):
+#    DATABASE_URL=postgresql+asyncpg://birthday_user:secure_password_2024@localhost:5432/birthday_calendar_db
+#    где localhost заменяет имя сервиса postgres
+#
+# ❌ НЕПРАВИЛЬНО (база данных = имя пользователя):
+#    DATABASE_URL=postgresql+asyncpg://birthday_user:password@postgres:5432/birthday_user
+#    Ошибка: "database 'birthday_user' does not exist"
+#
+# ❌ НЕПРАВИЛЬНО (несовпадение пароля):
+#    POSTGRES_PASSWORD=password1
+#    DATABASE_URL=postgresql+asyncpg://birthday_user:password2@postgres:5432/birthday_calendar_db
+#    Ошибка: "password authentication failed"
+#
+# ❌ НЕПРАВИЛЬНО (несовпадение имени пользователя):
+#    POSTGRES_USER=user1
+#    DATABASE_URL=postgresql+asyncpg://user2:password@postgres:5432/birthday_calendar_db
+#    Ошибка: "password authentication failed for user 'user2'"
+#
+# ❌ НЕПРАВИЛЬНО (несовпадение имени базы данных):
+#    POSTGRES_DB=db1
+#    DATABASE_URL=postgresql+asyncpg://user:password@postgres:5432/db2
+#    Ошибка: "database 'db2' does not exist"
+#
+# ❌ НЕПРАВИЛЬНО (неверный хост для Docker):
+#    DATABASE_URL=postgresql+asyncpg://user:password@localhost:5432/db
+#    В Docker Compose используйте 'postgres', не 'localhost'!
+#    Ошибка: "could not translate host name 'localhost'"
 #
 # Если используете Docker Compose, DATABASE_URL формируется автоматически из переменных выше.
-# Если настраиваете вручную, убедитесь что имя базы данных в URL совпадает с POSTGRES_DB.
+# Если настраиваете вручную, убедитесь что все компоненты совпадают!
 DATABASE_URL=postgresql+asyncpg://birthday_user:secure_password_2024@postgres:5432/birthday_calendar_db
 
 # OpenRouter API Configuration
