--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,8 @@
     "@twa-dev/sdk": "^8.0.2",
     "date-fns": "^2.30.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.20.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.57.0",
