--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ x-build-args: &build-args
 services:
   postgres:
     # Если возникают проблемы с загрузкой образа (TLS handshake timeout), попробуйте:
-    # 
+    #
     # Вариант 1: Использовать скрипт для предварительной загрузки всех образов с retry
     #   Linux/macOS: ./scripts/download-all-images.sh
     #   Windows: .\scripts\download-all-images.ps1
@@ -46,7 +46,11 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-postgres} -d ${POSTGRES_DB:-birthday_calendar_db}"]
+      test:
+        [
+          "CMD-SHELL",
+          "pg_isready -U ${POSTGRES_USER:-postgres} -d ${POSTGRES_DB:-birthday_calendar_db}",
+        ]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -68,7 +72,7 @@ services:
     environment:
       # ВАЖНО: Не используйте значения по умолчанию в production!
       # Установите POSTGRES_USER, POSTGRES_PASSWORD, POSTGRES_DB в .env файле
-      # 
+      #
       # Базовые переменные PostgreSQL (пробрасываются напрямую для validate_database_env_sync)
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
@@ -118,4 +122,3 @@ services:
 
 volumes:
   postgres_data:
-
