--- a/backend/pytest.ini
+++ b/backend/pytest.ini
@@ -13,4 +13,9 @@ addopts =
     --strict-markers
     --tb=short
     --disable-warnings
+    --cov=src
+    --cov-report=html
+    --cov-report=term-missing
+    --cov-report=json
+    --cov-fail-under=70
 
