--- a/backend/requirements-prod.txt
+++ b/backend/requirements-prod.txt
@@ -6,7 +6,7 @@
 # Проверьте, что все импорты из src/ работают с этим списком.
 
 # Web framework
-fastapi==0.104.1
+fastapi>=0.115.0
 uvicorn[standard]==0.24.0
 slowapi==0.1.9  # Rate limiting для защиты от DDoS
 
@@ -25,7 +25,7 @@ pydantic==2.5.0
 httpx==0.25.1
 
 # Image processing
-pillow==10.1.0
+pillow>=10.3.0
 qrcode[pil]==7.4.2
 
 # Scheduling
