--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,5 @@
 # Production dependencies
-fastapi==0.104.1
+fastapi>=0.115.0
 uvicorn[standard]==0.24.0
 slowapi==0.1.9
 aiogram==3.23.0
@@ -8,7 +8,7 @@ asyncpg==0.29.0
 alembic==1.12.1
 pydantic==2.5.0
 httpx==0.25.1
-pillow==10.1.0
+pillow>=10.3.0
 qrcode[pil]==7.4.2
 apscheduler==3.10.4
 python-dotenv==1.0.0
