--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,6 @@
 # Production dependencies
 fastapi>=0.115.0
+starlette>=0.47.2  # Исправляет CVE-2024-47874 и CVE-2025-54121
 uvicorn[standard]==0.24.0
 slowapi==0.1.9
 aiogram==3.23.0
