--- a/env.example
+++ b/env.example
@@ -133,8 +133,10 @@ API_HOST=0.0.0.0
 #
 # Подробные инструкции: см. MINI_APP_SETUP.md
 #
-# Значение по умолчанию (НЕ РАБОТАЕТ для Mini App!):
-VITE_API_URL=http://localhost:8000
+# ОБЯЗАТЕЛЬНО: Установите внешний HTTPS URL для API
+# Проект работает на сервере, localhost не поддерживается
+# Пример для production: VITE_API_URL=https://api.your-domain.com:8001
+VITE_API_URL=https://your-domain.com:8001
 
 # Application Settings
 TIMEZONE=Asia/Tokyo
