--- a/env.example
+++ b/env.example
@@ -144,10 +144,16 @@ NOTIFICATION_HOUR=9
 NOTIFICATION_MINUTE=0
 
 # Development/Production
-# Установите 'production' для production окружения
+# 
+# ВАЖНО: Значения по умолчанию настроены для PRODUCTION
+# Для разработки измените эти значения на:
+#   ENVIRONMENT=development
+#   DEBUG=true
+#
 # В production CORS будет использовать только конкретные домены из ALLOWED_ORIGINS
-ENVIRONMENT=development
-DEBUG=true
+# В development CORS разрешает все origins для удобства разработки
+ENVIRONMENT=production
+DEBUG=false
 
 # CORS Configuration
 # Разрешенные origins для CORS
@@ -173,4 +179,25 @@ ALLOWED_ORIGINS=*
 # Если не настроен, кнопка Mini App не появится в боте.
 # Подробные инструкции: см. MINI_APP_SETUP.md
 TELEGRAM_WEBAPP_URL=https://your-domain.com
+
+# Frontend Build Mode
+# Режим сборки frontend: dev (по умолчанию) или production
+# 
+# DEVELOPMENT (FRONTEND_MODE=dev, FRONTEND_TARGET=runtime-dev):
+#   - Используется Vite dev server
+#   - Hot module replacement (HMR) доступен
+#   - Больший размер образа (devDependencies включены)
+#
+# PRODUCTION (FRONTEND_MODE=production, FRONTEND_TARGET=runtime-prod):
+#   - Используется production build с nginx
+#   - Статические файлы обслуживаются через nginx
+#   - Меньший размер образа, лучшая производительность
+#   - Установите: FRONTEND_MODE=production и FRONTEND_TARGET=runtime-prod
+#
+# Для переключения в production mode:
+#   1. Установите FRONTEND_MODE=production и FRONTEND_TARGET=runtime-prod в .env
+#   2. Пересоберите образ: docker compose build frontend
+#   3. Перезапустите контейнер: docker compose up -d frontend
+FRONTEND_MODE=dev
+FRONTEND_TARGET=runtime-dev
 
