--- a/env.example
+++ b/env.example
@@ -180,6 +180,39 @@ ALLOWED_ORIGINS=*
 # Подробные инструкции: см. MINI_APP_SETUP.md
 TELEGRAM_WEBAPP_URL=https://your-domain.com
 
+# ============================================
+# Mini App Versioning (Cache-Busting)
+# ============================================
+# Автоматическое обновление версии Mini App для обхода кэша Telegram
+# 
+# Приоритет источников версии (по порядку):
+# 1. APP_VERSION (предпочтительно) - версия приложения
+# 2. GIT_COMMIT_HASH - короткий хеш коммита (первые 7 символов)
+# 3. BUILD_TIMESTAMP - unix timestamp билда
+# 4. Fallback - текущий unix timestamp (если ничего не найдено)
+#
+# ВАЖНО: Версия используется ТОЛЬКО для команды /panel
+# Команда /start не использует версионирование
+#
+# Примеры настройки в CI/CD:
+#
+# Вариант 1: APP_VERSION (рекомендуется)
+#   export APP_VERSION="1.2.3"
+#   или
+#   export APP_VERSION="$(date +%Y.%m.%d.%H%M%S)"
+#
+# Вариант 2: GIT_COMMIT_HASH
+#   export GIT_COMMIT_HASH="$(git rev-parse HEAD)"
+#
+# Вариант 3: BUILD_TIMESTAMP
+#   export BUILD_TIMESTAMP="$(date +%s)"
+#
+# Если ни одна переменная не установлена, используется fallback (текущий timestamp)
+# Подробности: см. AUTOMATIC_CACHE_BUST.md
+APP_VERSION=
+GIT_COMMIT_HASH=
+BUILD_TIMESTAMP=
+
 # Frontend Build Mode
 # Режим сборки frontend: dev (по умолчанию) или production
 # 
